Small additions and bug fixes
+ Now header logo is not blinking in fixed/unfixed state change
+ Removed unwanted scrollbar in offcanvas menu
+ How header menu immediately appears on a page, no need for scroll
+ Menu items in offcanvas menu how located in the center of the menu

--- a/assets/sass/blocks/_welcome-section.sass
+++ b/assets/sass/blocks/_welcome-section.sass
@@ -22,7 +22,7 @@
         font-size: 40px
       @media screen and (max-width: 1024px)
         width: 90px
-      @media screen and (max-width: 768px)
+      @media screen and (max-width: 425px)
         width: 50px
     .slick-prev
       left: 0
